cluster/monitoring/statuspage/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage-service
spec:
  selector:
    app: statuspage
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statuspage
spec:
  selector:
    matchLabels:
      app: statuspage
  replicas: 1
  template:
    metadata:
      labels:
        app: statuspage
    spec:
      containers:
      - name: statuspage
        image: ghcr.io/aisling136/argocdstatus:0.3.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: 2m
            memory: 100Mi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: mdi-bottle-tonic-plus
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: "ArgoStatus"
    gethomepage.dev/pod-selector: >-
        app in (
          statuspage
        )
    external-dns.alpha.kubernetes.io/target: gw-external.dex136.xyz
  name: statuspage
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - statuspage.dex136.xyz
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: statuspage-service
      namespace: default
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
